# CashFlow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  config.py  database.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
api/: CLAUDE.md  budgets.py  categories.py  deps.py  expenses.py  permissions.py  statistics.py  tags.py  users.py
bot/: CLAUDE.md  bot.py  client.py  keyboards.py  middlewares.py  states.py
docs/: SCHEMA.sql  STATUS.md  seed.sql
migrations/: CLAUDE.md  env.py  script.py.mako
models/: CLAUDE.md  budget_plan.py  category.py  enums.py  errors.py  expense.py  permission.py  statistics.py  tag.py  user.py
repositories/: CLAUDE.md  base.py  budget_plan_repo.py  category_repo.py  expense_repo.py  permission_repo.py  tag_repo.py  user_repo.py
scripts/: integration_docker.sh  verify.sh
services/: CLAUDE.md  budget_service.py  category_service.py  expense_service.py  notification_service.py  period.py  permission_service.py  statistics_service.py  tag_service.py  user_service.py
tests/: CLAUDE.md  README.md  conftest.py  factories.py  test_bot_bot.py  test_bot_client.py  test_bot_handlers_budgets.py  test_bot_handlers_categories.py  test_bot_handlers_expenses.py  test_bot_handlers_statistics.py  test_bot_handlers_tags.py  test_bot_keyboards.py  test_bot_middlewares.py  test_budget_plan_repo.py  test_budget_service.py  test_budgets_api.py  test_categories_api.py  test_category_repo.py  test_category_service.py  test_db_roundtrip.py  (+21 more)
(+24 files in other folders)
